--- a/Sivilab.PortalEmpleo/Components/Layout/Header.razor
+++ b/Sivilab.PortalEmpleo/Components/Layout/Header.razor
@@ -1,7 +1,12 @@
 ﻿<header>
-    <h1>Portal de Empleo</h1>
+    <div>
+        <a href="portal.html">
+            <img src="https://capacitacionsne.stps.gob.mx/pluginfile.php/1/theme_mb2nl/logo/1751054528/LogoSNE.png" alt="Logo" style="height: 40px;">
+        </a>
+        <h1>Portal de Empleo</h1>
+    </div>
     <nav>
-        <a href="#">Regístrate</a>
+        <NavLink href="/registro" class="nav-link">Regístrate</NavLink>
         <a href="#" class="bordered-link">Iniciar sesión</a>
     </nav>
 </header>
