--- a/Sivilab.PortalEmpleo/wwwroot/app.css
+++ b/Sivilab.PortalEmpleo/wwwroot/app.css
@@ -1,10 +1,10 @@
 :root {
-    --gray-800: #1f2937;
+    --gray-800: #235B4E;
     --gray-100: #f3f4f6;
     --gray-300: #d1d5db;
     --gray-500: #6b7280;
-    --primary-color: #3b82f6;
-    --secondary-color: #fbbf24;
+    --primary-color: #235B4E;
+    --secondary-color: #BC955C;
     --bg-light: var(--gray-100);
     --text-dark: var(--gray-800);
     --text-light: #ffffff;
