--- a/Sivilab.PortalEmpleo/Components/Portal/FormularioRegistro.razor
+++ b/Sivilab.PortalEmpleo/Components/Portal/FormularioRegistro.razor
@@ -191,6 +191,7 @@
     }
 </style>
 
+<!--
 
 <section id="registro-curp" class="registro-curp">
     <div class="curp-busqueda">
@@ -420,12 +421,13 @@
         document.getElementById("registrarBtn").style.display = "inline-block";
     }
 </script>
+-->
 
 @code {
-    private FormularioEmpleo formulario = new();
+    //private FormularioEmpleo formulario = new();
 
 
-    private async Task HandleValidSubmit()
+    /*private async Task HandleValidSubmit()
     {
         // Aquí procesas el formulario válido
         // Por ejemplo, llamar a un servicio para guardar los datos
@@ -480,7 +482,7 @@
 
     // Hay que añadir lógica para cuando haya un perfil registrado, no registrado o //
     // registrado pero no como usuario (no dado de alta)                            //
-    
+    */
 }
 
 
