--- a/Sivilab.PortalEmpleo/Components/Pages/RegistrarUsuario.razor
+++ b/Sivilab.PortalEmpleo/Components/Pages/RegistrarUsuario.razor
@@ -6,6 +6,7 @@
 
 
 <style>
+    @@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Patria&display=swap');
     :root {
         --primary: #235B4E;
         --secondary: #BC955C;
@@ -22,7 +23,11 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Noto Sans', sans-serif;
+    }
+
+    h1, h2, h3 {
+        font-family: 'Patria', sans-serif;
     }
 
     body {
