--- a/Sivilab.PortalEmpleo/Components/Layout/Header.razor
+++ b/Sivilab.PortalEmpleo/Components/Layout/Header.razor
@@ -1,15 +1,16 @@
-﻿<header>
-    <div>
-        <a href="portal.html">
-            <img src="https://capacitacionsne.stps.gob.mx/pluginfile.php/1/theme_mb2nl/logo/1751054528/LogoSNE.png" alt="Logo" style="height: 40px;">
+﻿<header class="main-header">
+    <div class="header-left">
+        <a href="portal.html" class="logo-link">
+            <img src="https://capacitacionsne.stps.gob.mx/pluginfile.php/1/theme_mb2nl/logo/1751054528/LogoSNE.png" alt="Logo">
         </a>
-        <h1>Portal de Empleo</h1>
+        <h1 class="header-title">Portal de Empleo</h1>
     </div>
-    <nav>
+    <nav class="header-right">
         <NavLink href="/registro" class="nav-link">Regístrate</NavLink>
         <a href="#" class="bordered-link">Iniciar sesión</a>
     </nav>
 </header>
+
 
 @code {
 
